# newsletter-generator

./: .env.example  .env.template  .gitignore  AGENT_ARCHITECTURE.md  CLEANUP_REPORT.md  COMPREHENSIVE_CONTENT_ENHANCEMENT.md  CONTRIBUTING.md  CRAWL4AI_INTEGRATION.md  CREWAI_NEWSLETTER_TOOLS_ANALYSIS.md  CREWAI_WEBSEARCH_CONVERSION_PLAN.md  Deep Dive & Analysis Example.md  FINAL_IMPLEMENTATION_SUMMARY.md  Makefile  NEWSLETTER_ENHANCEMENT_PLAN.md  News and Tools Example.md  PHASE_4_EXTENSIBILITY_SUMMARY.md  README.md  README_SECTION_AWARE.md  codebase_analysis.json  debug_newsletter.py  docker-compose.yaml  hybrid_newsletter_system_plan.md  implementation_plan.md  implementation_plan_agentic_rag.md  infographic_example.html  launch_streamlit.py  mcp.json  product_plan.md  project_plan.md  pyproject.toml  requirements.txt  run_streamlit.py  start_streamlit.sh  streamlit_app.py  streamlit_app_enhanced.py  test_crawl4ai_integration.py  test_deep_dive_specific.py  test_minimal.py  test_newsletter.py  test_simple_newsletter.py  (+5 more)
.claude/: settings.local.json
.ipynb_checkpoints/: README-checkpoint.md
config/: scheduler_config.json  section_aware_config.yaml  sources.yaml
deployment/: deploy.py  section_aware_deployment.py
dev/: README.md  benchmark.py  benchmark_results.csv  demo_crewai_serper_tool.py  demo_enhanced_tool_tracking.py  enhanced_tool_tracking_implementation_summary.md  integration_test_results.json  phase1_implementation_summary.md  phase2_implementation_summary.md  phase4_completion_report.md  phase4_final_summary.md  phase4_implementation_summary.md  python_3_10_crewai_setup_guide.md  serper_tool_demo.py  serper_tool_test_results.md  test_content_validator.py  test_crawl4ai_integration.py  test_full_integration.py  test_phase1_daily_pipeline.py  test_phase2.py  test_phase3.py  test_phase4.py  test_prompts_ab.py  test_serper_tool.py  test_tool_calls.py  test_tool_usage_tracking.py
docs/: AGENT_ARCHITECTURE_FLOW.md  AGENT_ARCHITECTURE_SIMPLE.md  AGENT_CONTEXT_INSTRUCTIONS.md  COMPREHENSIVE_ENHANCEMENT_DESIGN.md  DESIGN_VALIDATION_REPORT.md  DOCUMENTATION_CLEANUP_PLAN.md  IMPLEMENTATION_ROADMAP.md  MOBILE_OPTIMIZATION_SPECIFICATION.md  MODEL_CHANGE_SUMMARY.md  NEWSLETTER_EVALUATION_REPORT_20250730.md  NEWSLETTER_EVALUATION_REPORT_20250730_LANGCHAIN.md  PHASE_0_COMPLETION_REPORT.md  PHASE_1_COMPLETION_REPORT.md  PHASE_2_TESTING_INFRASTRUCTURE.md  PHASE_3_SEARCH_SCRAPING_CONSOLIDATION.md  PIPELINE_SIMPLIFICATION_PLAN.md  README.md  REFACTORING_IMPLEMENTATION_GUIDE.md  REFACTORING_PLAN.md  SCRAPING_TOOLS_COMPARISON.md  agent_instructions.md  crawl4ai_context.md  multi_agent_enhancement_prd.md  newsletter_intent.md  newsletter_templates.md  product_plan.md  project_blog_post.md  tool_usage_enhancement_prd.md  tool_usage_implementation_workflow.md
examples/: depth_example.md  enhanced_architecture_demo.py  phase3_tools_demo.py  phase6_integration_demo.py
outputs/: RAG_vs_Agentic_RAG_vs_Graph_RAG_20250709_113424.md  langchain_and_langflow_20250711_135606.md
scripts/: analyze_codebase.py  cleanup_project.py  fast_phase3_test.py  migrate_sqlite_to_chromadb.py  phase3_integration_demo.py  run_phase2_tests.py  run_phase3_tests.py  sample_newsletter_run.py  test_nvidia_pipeline.py  validate_phase3_integration.py
setup/: requirements.txt  setup.sh
src/: config_loader.py  data_processor.py  db_setup.py  demo_enhanced_system.py  enhanced_generation.py  ingest.py  main.py  rss_extractor.py  sources.yaml  vector_db.py  web_scraper.py
streamlit/: README.md  README_STREAMLIT.md  app.py  app_hybrid_minimal.py  async_issue_resolution.md  demo_content_generation.py  launch_streamlit.py  requirements.txt  run_streamlit_app.py  streamlit_app.py  streamlit_app_enhanced.py  streamlit_app_hybrid.py  streamlit_integration_summary.md  streamlit_update_complete.md  styles.css  test_streamlit_integration.py  ui_components.py  ui_components_hybrid.py
(+282 files in other folders)
