# pyproject.toml essentials for Phase 1
[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
ollama = "^0.1.7"
chromadb = "^0.4.15"
langchain = "^0.1.0"
scrapy = "^2.11.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
feedparser = "^6.0.10"
python-dotenv = "^1.0.0"
pydantic = "^2.5.0"
