# pyproject.toml updated for Python 3.10 and modern CrewAI
[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
ollama = "^0.5.1"
chromadb = "^1.0.13"
langchain = "^0.2.0"
scrapy = "^2.11.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
feedparser = "^6.0.10"
python-dotenv = "^1.0.0"
pydantic = "^2.5.0"
scikit-learn = "^1.3.0"

# CrewAI and tools
crewai = "^0.95.0"
crewai-tools = "^0.25.8"
serper-dev = "^0.1.0"

# Web scraping and async
aiohttp = "^3.9.0"
crawl4ai = "^0.6.3"
playwright = "^1.53.0"
